
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct in_addr {int s_addr; } ;
struct hostent {int h_length; int h_addr; } ;
typedef int addr ;


 scalar_t__ gethostbyname (char*) ;
 int inet_addr (char*) ;
 int memcpy (char*,int ,int ) ;
 int memset (struct in_addr*,int ,int) ;

int net_resolve(char *host)
{
 struct in_addr addr;
 struct hostent *he;

 memset(&addr, 0, sizeof(addr));

 if ((addr.s_addr = inet_addr(host)) == -1) {
  if (!(he = (struct hostent *)gethostbyname(host)))
   return(0);
  memcpy((char *)&addr.s_addr, he->h_addr, he->h_length);
 }
 return(addr.s_addr);
}
