; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/solaris/remote/extr_716.c_net_resolve.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/solaris/remote/extr_716.c_net_resolve.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in_addr = type { i32 }
%struct.hostent = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @net_resolve(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.in_addr, align 4
  %5 = alloca %struct.hostent*, align 8
  store i8* %0, i8** %3, align 8
  %6 = call i32 @memset(%struct.in_addr* %4, i32 0, i32 4)
  %7 = load i8*, i8** %3, align 8
  %8 = call i32 @inet_addr(i8* %7)
  %9 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %4, i32 0, i32 0
  store i32 %8, i32* %9, align 4
  %10 = icmp eq i32 %8, -1
  br i1 %10, label %11, label %27

11:                                               ; preds = %1
  %12 = load i8*, i8** %3, align 8
  %13 = call i64 @gethostbyname(i8* %12)
  %14 = inttoptr i64 %13 to %struct.hostent*
  store %struct.hostent* %14, %struct.hostent** %5, align 8
  %15 = icmp ne %struct.hostent* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %11
  store i32 0, i32* %2, align 4
  br label %30

17:                                               ; preds = %11
  %18 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %4, i32 0, i32 0
  %19 = bitcast i32* %18 to i8*
  %20 = load %struct.hostent*, %struct.hostent** %5, align 8
  %21 = getelementptr inbounds %struct.hostent, %struct.hostent* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.hostent*, %struct.hostent** %5, align 8
  %24 = getelementptr inbounds %struct.hostent, %struct.hostent* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @memcpy(i8* %19, i32 %22, i32 %25)
  br label %27

27:                                               ; preds = %17, %1
  %28 = getelementptr inbounds %struct.in_addr, %struct.in_addr* %4, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  store i32 %29, i32* %2, align 4
  br label %30

30:                                               ; preds = %27, %16
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @memset(%struct.in_addr*, i32, i32) #1

declare dso_local i32 @inet_addr(i8*) #1

declare dso_local i64 @gethostbyname(i8*) #1

declare dso_local i32 @memcpy(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
